fix: ensured slider dot's wrap

--- a/src/components/ui/slider-dots/slider-dots.module.scss
+++ b/src/components/ui/slider-dots/slider-dots.module.scss
@@ -2,8 +2,10 @@
 
 .root {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-top: 20px;
+  gap: 12px 0;
 }
 
 .dot {
